# CxxSwizzle

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  dummy.cpp  vcpkg.json
.github/actions/cmake-build/: action.yaml
.github/workflows/: apple-clang-samples-simd.yml  apple-clang-samples.yml  apple-clang-tests.yml  apple-clang.yml  clang-11.yml  clang-12.yml  clang-13.yml  clang-latest.yml  clang-samples-simd.yml  clang-samples.yml  clang-tests.yml  clang.yml  g++10-samples-simd.yml  g++10-samples.yml  g++10-tests.yml  g++10.yml  gcc-10.yml  gcc-11.yml  gcc-12.yml  gcc-9.yml  gcc-latest.yml  main.yml  vs2019-samples-simd.yml  vs2019-samples.yml  vs2019-tests.yml  vs2019.yml  vs2022.yml
cmake/Modules/: CxxSwizzleSandbox.cmake  JSONParser.cmake  JSONParser_LICENSE.txt  ShadertoyAPI.cmake
include/swizzle/: array.hpp  batch_adapters.hpp  define_vector_functions.hpp  inout_wrapper.hpp  matrix.hpp  sampler2D.hpp  sampler_generic.hpp  setup_scalar.hpp  setup_simd_dumb.hpp  setup_simd_naive.hpp  setup_simd_vc.hpp  setup_simd_vc_masked.hpp  vector.hpp
include/swizzle/detail/: batch_write_mask.hpp  cmath_imports.hpp  common_batch_operators.hpp  common_binary_operators.h  common_unary_operators.h  constructor_generator.h  fwd.h  fwd.hpp  glsl_functions.h  indexed_proxy.h  indexed_proxy.hpp  indexed_proxy_storage.hpp  indexed_proxy_swizzles.hpp  indexed_swizzle.hpp  indexed_swizzle_storage.hpp  indexed_swizzle_swizzles.hpp  indexed_vector_iterator.h  indexed_vector_iterator.hpp  preprocessor_sub.hpp  primitive_adapters.h  primitive_wrapper.h  proxy_writable_wrapper.h  read_only_wrapper.h  setup_common.hpp  simd_mask.h  simd_mask.hpp  static_functors.h  utils.h  vector_base.h  vector_base_type.hpp  vector_binary_operators.h  vector_data.h  vector_functions.h  vector_inout_wrapper.h  vector_storage.hpp  vector_traits.h  vector_traits.hpp  writable_wrapper.h
include/swizzle/glsl/: bool_vector.h  functions.txt  matrix.h  naive_functions_adapter.h  number_vector.h  (+11 more)
sample/: CMakeLists.txt  config.hpp.in  cxxswizzle.natvis  glsl_sandbox.hpp  main.cpp  shader.h  shadertoy_sandbox.cpp  shadertoy_sandbox.cpp.in  shadertoy_sandbox.hpp  use_scalar.h  use_simd.h  use_simd_masked.h
sample/shaders/: 2001_space_station.frag  complex.frag  elevated_coast.frag  ellipse.frag  face.frag  gears.frag  leadlight.frag  night_mist_2019.frag  one_way_trip.frag  pl_gd_1.frag  pl_gd_2.frag  pl_gd_5.frag  raymarched_reflections.frag  road.frag  sampler.frag  sans_titre.frag  sky.frag  sky.h  subsurface_lattice.frag  terrain.frag  tribute_to_Marc-Antoine_Mathieu.frag  water_turbulence.frag  wolfenstein.frag  zone_plate_checkerboard.frag
sample_new/: CMakeLists.txt  JSONParser.cmake  config.hpp.in  cxxswizzle.natvis  main.cpp  shadertoy_sandbox.cpp  shadertoy_sandbox.cpp.in  shadertoy_sandbox.hpp
sample_new/discard_and_buffers_--_feb2019/: README.md  buffer_a.frag  buffer_a_ichannel_0.txt  buffer_b.frag  image.frag
sample_new/molten_bismuth/: README.md  bufA.frag  bufB.frag  bufB_iChannel0.txt  common.frag  iChannel0.txt  image.frag
sample_new/pl_gd_3/: main.frag
sample_new/pl_gd_4/: main.frag
sample_new/pl_gd_5/: README.md  main.frag
sample_new/rainforest/: README.md  buffer_a_ichannel_0.txt  image.frag
samples/: CMakeLists.txt  README.md
samples/_nv15__2001_space_station/: config.json  image.frag
samples/_sh16c__doom/: README.md  buffer_a.frag  buffer_b.frag  buffer_c.frag  buffer_d.frag  common.frag  config.json  image.frag  shadertoy_config.hpp
samples/_sh17b__pixel_shader_dungeon/: buffer_a.frag  buffer_b.frag  buffer_c.frag  buffer_d.frag  config.json  image.frag
samples/_sh17c__physically_based_shading/: buffer_a.frag  config.json  image.frag
samples/clouds/: config.json  image.frag
samples/creation_by_silexars/: README.md  config.json  image.frag  shadertoy_config.hpp
samples/creation_by_silexars_patched/: README.md  image.frag
samples/doom_fire_psx/: buffer_a.frag  common.frag  config.json  image.frag
samples/dry_ice_2/: README.md  buffer_a.frag  buffer_b.frag  buffer_c.frag  buffer_d.frag  common.frag  config.json  image.frag  shadertoy_config.hpp
samples/elevated/: buffer_a.frag  config.json  image.frag
samples/flame/: config.json
samples/iresolution_imouse_idate_etc/: config.json  image.frag
samples/isoline_triangle/: config.json  image.frag
samples/rainforest/: buffer_a.frag  config.json  image.frag
samples/raymarching_-_primitives/: config.json  image.frag  shadertoy_config.hpp
samples/seascape/: README.md  config.json  image.frag  shadertoy_config.hpp
samples/seascape_patched/: README.md
samples/seascape_public_api_fork/: config.json  image.frag
samples/snail/: config.json  image.frag
samples/very_fast_procedural_ocean/: config.json  image.frag
samples/volcanic/: buffer_a.frag  config.json  image.frag
samples/wolfenstein_3d/: config.json  image.frag
samples/zone_plate_checkerboard/: config.json  image.frag
sandbox/: shadertoy_sandbox.cpp.in
sandbox_template/: config.hpp.in  cxxswizzle.natvis  main.cpp  shadertoy_sandbox.cpp.in  shadertoy_sandbox.hpp
shadertoy-template/: main.cpp
shadertoys/: .gitignore  CMakeLists.txt
shadertoys/_expansive_reaction-diffusion/: buffer_a.frag  buffer_b.frag  buffer_c.frag  buffer_d.frag  config.json  image.frag
shadertoys/clouds/: config.json  image.frag
shadertoys/creation_by_silexars/: config.json
shadertoys/elevated/: buffer_a.frag  config.json  image.frag
shadertoys/flame/: config.json  image.frag
shadertoys/fractal_land/: config.json  image.frag  sound.frag
shadertoys/rainforest/: buffer_a.frag  config.json  image.frag
shadertoys/raymarching_-_primitives/: config.json  image.frag  image.patch
shadertoys/volcanic/: buffer_a.frag  config.json  image.frag
shadertoys/voxel_edges/: config.json  image.frag
test/: CMakeLists.txt  main.cpp  setup.h  test_basic.cpp  test_functions.cpp  test_inout_proxies.cpp  test_proxies.cpp  test_specs.cpp
unit_test/: CMakeLists.txt  main.cpp  setup.h  test_basic.cpp  test_functions.cpp  test_proxies.cpp  test_specs.cpp
(+30 files in other folders)
